--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,7 +27,7 @@ body {
 }
 
 .title-gradient {
-  @apply bg-clip-text text-transparent bg-gradient-to-tr from-black to-secondary dark:from-white dark:to-secondary;
+  @apply bg-clip-text text-transparent bg-sun dark:bg-moon;
 }
 
 .icon {
